--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta http-equiv="refresh" content="time; URL=https://koii.network/" />
 Welcome to Koii!
 You are being redirected to our new website. Please wait :)
 <script>window.location.href="https://koii.network/"</script>
